--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
         </ul>
         <ul>
             <li class="list-inline-item ">
-                <a href="https://www.linkedin.com/in/dinesh-chaudhari-490b9418a" target="blank">
+                <a href="https://www.linkedin.com/in/bikram-keshari-j-921719b7" target="blank">
                     <img src="assets/linkedin.svg">
                 </a>
             </li>
             <li class="list-inline-item ml-2">
-                <a href="https://github.com/dinesh-0310" target="blank">
+                <a href="https://github.com/BikramJagdev" target="blank">
                     <img src="assets/github.svg">
                 </a>
             </li>
             <li class="list-inline-item ml-2">
-                <a href="https://twitter.com/Dinesh_03_10?s=09" target="blank">
+                <a href="https://twitter.com/bikram_k_jagdev" target="blank">
                     <img src="assets/twitter.svg">
                 </a>
             </li>
             <li class="list-inline-item ml-2">
-                <a href="https://www.hackerrank.com/dinesh_0310" target="blank">
+                <a href="https://www.hackerrank.com/BikramJagdev" target="blank">
                     <img src="assets/hackerrank.svg">
                 </a>
             </li>
