--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
             <div class="row m-lg-4">
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
                     <div class="card">
-                        <div class="card-body shadow"><img class="img-fluid" src="./assets/techcrunch.png">
+                        <div class="card-body shadow"><img class="img-fluid" src="./assets/yourstory.png">
                             <hr>
                             <h4 class="card-title"><strong>Yourstory - Clone</strong></h4>
                             <p class="card-text">It is an online magazine, builds end-to-end features from the original website along with UI/UX</p>
-                            <a class="card-link text-muted mt-5" href="https://github.com/yashjain99/TechcrunchClone" target="blank"><i class="fa fa-github"></i><strong>&nbsp;Github&nbsp;</strong></a>
+                            <a class="card-link text-muted mt-5" href="" target="blank"><i class="fa fa-github"></i><strong>&nbsp;Github&nbsp;</strong></a>
                             <a class="card-link text-muted"
-                            href="https://techcrunch-clone.netlify.app"
+                            href=""
                             target="blank"><i class="fa fa-external-link"></i>&nbsp;<strong>Demo Link</strong></a>
                             <div class="row justify-content-center">
                                 <div style="margin-top: 30px; float: left;  margin-left: 30px;">
