--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
                             <hr>
                             <h4 class="card-title"><strong>Expence-manager</strong></h4>
                             <p class="card-text">Hasslefree way to keep track of all your debit and credit history & manage your expanses.</p>
-                            <a class="card-link text-muted mt-5" href="https://amal-biju.github.io/Expense-Manager/" target="blank"><i class="fa fa-github"></i><strong>&nbsp;Github&nbsp;</strong></a>
+                            <a class="card-link text-muted mt-5" href="" target="blank"><i class="fa fa-github"></i><strong>&nbsp;Github&nbsp;</strong></a>
                             <a class="card-link text-muted"
-                                href=" "
+                                href="https://amal-biju.github.io/Expense-Manager/"
                                 target="blank"><i class="fa fa-external-link"></i>&nbsp;<strong>Demo Link</strong></a>
                             <div class="row justify-content-center">
                                 <div style="margin-top: 68px; float: left; margin-left: 20px;">
