--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
                     <div class="card">
-                        <div class="card-body shadow"><img class="img-fluid" src="./assets/expence-manager.png">
+                        <div class="card-body shadow"><img class="img-fluid" src="">
                             <hr>
                             <h4 class="card-title"><strong>Expence-manager</strong></h4>
                             <p class="card-text">Hasslefree way to keep track of all your debit and credit history & manage your expanses.</p>
