--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <p></p>
         </div>
 
-        <img src="img/bikramLong.png" alt="" class="about-me__img">
+        <!-- <img src="img/bikramLong.png" alt="" class="about-me__img"> -->
     </section>
 
     <!-- My Work -->
@@ -115,14 +115,14 @@
 
         <div class="portfolio">
             <!-- Portfolio Item 1 -->
-            <a href="expense-Manager.html" class="portfolio__item">
-                <p class="section__subtitle--work">Expense-Manager</p>
-                <img src="img/expense-manager.png" alt="" class="portfolio__img">
-            </a>
-            <!-- Portfolio Item 2 -->
             <a href="yourstory.html" class="portfolio__item">
                 <p class="section__subtitle--work">Yourstory</p>
                 <img src="img/yourstory.png" alt="" class="portfolio__img">
+            </a>
+            <!-- Portfolio Item 2 -->
+            <a href="expense-Manager.html" class="portfolio__item">
+                <p class="section__subtitle--work">Expense-Manager</p>
+                <img src="img/expense-manager.png" alt="" class="portfolio__img">
             </a>
             <!-- Portfolio Item 3 -->
             <a href="youtube.html" class="portfolio__item">
