--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <p></p>
         </div>
 
-        <!-- <img src="img/bikramLong.png" alt="" class="about-me__img"> -->
+        <img src="img/bikram.png" alt="" class="about-me__img">
     </section>
 
     <!-- My Work -->
