--- a/yourstory.html
+++ b/yourstory.html
@@ -44,7 +44,8 @@
     </section>
 
     <div class="portfolio-item-individual">
-        <a href="https://yourstory-clone-project.netlify.app/" class="btn">Demo</a>
+        <!-- <a href="https://yourstory-clone-project.netlify.app/" class="btn">Demo</a> -->
+        <a href="https://yourstory-clone.netlify.app/" class="btn">Demo</a>
         <a href="https://github.com/vikash93825/Yourstory-clone" class="btn">Code</a>
         <p></p>
         <img src="img/yourstory.png" alt="">
