--- a/expense-Manager.html
+++ b/expense-Manager.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="img/bikram.png" alt="" width="500px">
+            <!-- <img src="img/bikram.png" alt="" width="500px"> -->
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
